addressing comments
Signed-off-by: Sarthak Aggarwal <sarthagg@amazon.com>