@@ -9,6 +9,7 @@
 package org.opensearch.index.compositeindex.datacube.startree.index;
 
 import org.apache.lucene.codecs.DocValuesProducer;
+import org.apache.lucene.index.DocValues;
 import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.SegmentReadState;
 import org.apache.lucene.index.SortedNumericDocValues;
@@ -28,12 +29,11 @@ import org.opensearch.index.compositeindex.datacube.startree.node.StarTreeNode;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Supplier;
 
 import static org.opensearch.index.codec.composite.composite99.Composite99DocValuesReader.getSortedNumericDocValues;
 import static org.opensearch.index.compositeindex.CompositeIndexConstants.SEGMENT_DOCS_COUNT;
@@ -48,17 +48,47 @@ import static org.opensearch.index.compositeindex.datacube.startree.utils.StarTr
  */
 @ExperimentalApi
 public class StarTreeValues implements CompositeIndexValues {
+
+    /**
+     * Representing the star tree field configuration.
+     */
     private final StarTreeField starTreeField;
+
+    /**
+     * The root node of the star tree.
+     */
     private final StarTreeNode root;
-    private final Map<String, DocIdSetIterator> dimensionDocValuesIteratorMap;
-    private final Map<String, DocIdSetIterator> metricDocValuesIteratorMap;
+
+    /**
+     * A map containing suppliers for DocIdSetIterators for dimensions.
+     */
+    private final Map<String, Supplier<DocIdSetIterator>> dimensionDocValuesIteratorMap;
+
+    /**
+     * A map containing suppliers for DocIdSetIterators for metrics.
+     */
+    private final Map<String, Supplier<DocIdSetIterator>> metricDocValuesIteratorMap;
+
+    /**
+     * A map containing attributes associated with the star tree values.
+     */
     private final Map<String, String> attributes;
 
+    /**
+     * Constructs a new StarTreeValues object with the provided parameters.
+     * Used for testing.
+     *
+     * @param starTreeField                 The StarTreeField object representing the star tree field configuration.
+     * @param root                          The root node of the star tree.
+     * @param dimensionDocValuesIteratorMap A map containing suppliers for DocIdSetIterators for dimensions.
+     * @param metricDocValuesIteratorMap    A map containing suppliers for DocIdSetIterators for metrics.
+     * @param attributes                    A map containing attributes associated with the star tree values.
+     */
     public StarTreeValues(
         StarTreeField starTreeField,
         StarTreeNode root,
-        Map<String, DocIdSetIterator> dimensionDocValuesIteratorMap,
-        Map<String, DocIdSetIterator> metricDocValuesIteratorMap,
+        Map<String, Supplier<DocIdSetIterator>> dimensionDocValuesIteratorMap,
+        Map<String, Supplier<DocIdSetIterator>> metricDocValuesIteratorMap,
         Map<String, String> attributes
     ) {
         this.starTreeField = starTreeField;
@@ -68,6 +98,15 @@ public class StarTreeValues implements CompositeIndexValues {
         this.attributes = attributes;
     }
 
+    /**
+     * Constructs a new StarTreeValues object by reading the data from the segment
+     *
+     * @param compositeIndexMetadata     The CompositeIndexMetadata object containing metadata for the composite index.
+     * @param compositeIndexDataIn       The IndexInput object for reading the composite index data.
+     * @param compositeDocValuesProducer The DocValuesProducer object for producing doc values.
+     * @param readState                  The SegmentReadState object representing the state of the segment being read.
+     * @throws IOException If an I/O error occurs while reading the data.
+     */
     public StarTreeValues(
         CompositeIndexMetadata compositeIndexMetadata,
         IndexInput compositeIndexDataIn,
@@ -106,21 +145,25 @@ public class StarTreeValues implements CompositeIndexValues {
 
         // get doc id set iterators for dimensions
         for (String dimension : starTreeMetadata.getDimensionFields()) {
-            SortedNumericDocValues dimensionSortedNumericDocValues = null;
-            if (readState != null) {
-                FieldInfo dimensionfieldInfo = readState.fieldInfos.fieldInfo(
-                    fullyQualifiedFieldNameForStarTreeDimensionsDocValues(starTreeField.getName(), dimension)
-                );
-                if (dimensionfieldInfo != null) {
-                    dimensionSortedNumericDocValues = compositeDocValuesProducer.getSortedNumeric(dimensionfieldInfo);
+            dimensionDocValuesIteratorMap.put(dimension, () -> {
+                try {
+                    SortedNumericDocValues dimensionSortedNumericDocValues = null;
+                    if (readState != null) {
+                        FieldInfo dimensionfieldInfo = readState.fieldInfos.fieldInfo(
+                            fullyQualifiedFieldNameForStarTreeDimensionsDocValues(starTreeField.getName(), dimension)
+                        );
+                        if (dimensionfieldInfo != null) {
+                            dimensionSortedNumericDocValues = compositeDocValuesProducer.getSortedNumeric(dimensionfieldInfo);
+                        }
+                    }
+                    return getSortedNumericDocValues(dimensionSortedNumericDocValues);
+                } catch (IOException e) {
+                    throw new RuntimeException("Error loading dimension DocIdSetIterator", e);
                 }
-            }
-
-            dimensionDocValuesIteratorMap.put(dimension, getSortedNumericDocValues(dimensionSortedNumericDocValues));
+            });
         }
 
         // get doc id set iterators for metrics
-
         for (Metric metric : starTreeMetadata.getMetrics()) {
             for (MetricStat metricStat : metric.getMetrics()) {
                 String metricFullName = fullyQualifiedFieldNameForStarTreeMetricsDocValues(
@@ -128,25 +171,32 @@ public class StarTreeValues implements CompositeIndexValues {
                     metric.getField(),
                     metricStat.getTypeName()
                 );
-
-                SortedNumericDocValues metricSortedNumericDocValues = null;
-                if (readState != null) {
-                    FieldInfo metricFieldInfo = readState.fieldInfos.fieldInfo(metricFullName);
-                    if (metricFieldInfo != null) {
-                        metricSortedNumericDocValues = compositeDocValuesProducer.getSortedNumeric(metricFieldInfo);
+                metricDocValuesIteratorMap.put(metricFullName, () -> {
+                    try {
+                        SortedNumericDocValues metricSortedNumericDocValues = null;
+                        if (readState != null) {
+                            FieldInfo metricFieldInfo = readState.fieldInfos.fieldInfo(metricFullName);
+                            if (metricFieldInfo != null) {
+                                metricSortedNumericDocValues = compositeDocValuesProducer.getSortedNumeric(metricFieldInfo);
+                            }
+                        }
+                        return getSortedNumericDocValues(metricSortedNumericDocValues);
+                    } catch (IOException e) {
+                        throw new RuntimeException("Error loading metric DocIdSetIterator", e);
                     }
-                }
-                metricDocValuesIteratorMap.put(metricFullName, getSortedNumericDocValues(metricSortedNumericDocValues));
+                });
             }
         }
 
         // create star-tree attributes map
-        Map<String, String> segmentAttributes = new HashMap<>();
-        segmentAttributes.put(SEGMENT_DOCS_COUNT, String.valueOf(starTreeMetadata.getSegmentAggregatedDocCount()));
-        segmentAttributes.put(STAR_TREE_DOCS_COUNT, String.valueOf(starTreeMetadata.getStarTreeDocCount()));
 
         // Create an unmodifiable view of the map
-        attributes = Collections.unmodifiableMap(segmentAttributes);
+        attributes = Map.of(
+            SEGMENT_DOCS_COUNT,
+            String.valueOf(starTreeMetadata.getSegmentAggregatedDocCount()),
+            STAR_TREE_DOCS_COUNT,
+            String.valueOf(starTreeMetadata.getStarTreeDocCount())
+        );
 
     }
 
@@ -155,23 +205,61 @@ public class StarTreeValues implements CompositeIndexValues {
         return this;
     }
 
+    /**
+     * Returns an object representing the star tree field configuration.
+     *
+     * @return The StarTreeField object representing the star tree field configuration.
+     */
     public StarTreeField getStarTreeField() {
         return starTreeField;
     }
 
+    /**
+     * Returns the root node of the star tree.
+     *
+     * @return The root node of the star tree.
+     */
     public StarTreeNode getRoot() {
         return root;
     }
 
-    public Map<String, DocIdSetIterator> getDimensionDocValuesIteratorMap() {
-        return dimensionDocValuesIteratorMap;
-    }
-
-    public Map<String, DocIdSetIterator> getMetricDocValuesIteratorMap() {
-        return metricDocValuesIteratorMap;
-    }
-
+    /**
+     * Returns the map containing attributes associated with the star tree values.
+     *
+     * @return The map containing attributes associated with the star tree values.
+     */
     public Map<String, String> getAttributes() {
         return attributes;
     }
+
+    /**
+     * Returns the DocIdSetIterator for the specified dimension.
+     *
+     * @param dimension The name of the dimension.
+     * @return The DocIdSetIterator for the specified dimension.
+     */
+    public DocIdSetIterator getDimensionDocIdSetIterator(String dimension) {
+
+        if (dimensionDocValuesIteratorMap.containsKey(dimension)) {
+            return dimensionDocValuesIteratorMap.get(dimension).get();
+        }
+
+        return DocValues.emptySortedNumeric();
+    }
+
+    /**
+     * Returns the DocIdSetIterator for the specified fully qualified metric name.
+     *
+     * @param fullyQualifiedMetricName The fully qualified name of the metric.
+     * @return The DocIdSetIterator for the specified fully qualified metric name.
+     */
+    public DocIdSetIterator getMetricDocIdSetIterator(String fullyQualifiedMetricName) {
+
+        if (metricDocValuesIteratorMap.containsKey(fullyQualifiedMetricName)) {
+            return metricDocValuesIteratorMap.get(fullyQualifiedMetricName).get();
+        }
+
+        return DocValues.emptySortedNumeric();
+    }
+
 }
